--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,68 +1,67 @@
 /* Подключение Helvetica Neue */
 @font-face {
-    font-family: 'Helvetica Neue';
-    src: url('/src/fonts/Helvetica/HelveticaNeueLight.otf') format('opentype');
-    font-weight: 300;
-    font-style: normal;
-  }
-  
-  @font-face {
-    font-family: 'Helvetica Neue';
-    src: url('/src/fonts/Helvetica/HelveticaNeue-Bold.otf') format('opentype');
-    font-weight: 700;
-    font-style: normal;
-  }
-  
-  @font-face {
-    font-family: 'Helvetica Neue';
-    src: url('/src/fonts/Helvetica/HelveticaNeue-Medium.otf') format('opentype');
-    font-weight: 500;
-    font-style: normal;
-  }
-  
-  /* Подключение TT Travels */
-  @font-face {
-    font-family: 'TT Travels';
-    src: url('/src/fonts/Travels/TT Travels Trial Regular.otf') format('opentype');
-    font-weight: 400;
-    font-style: normal;
-  }
-  
-  @font-face {
-    font-family: 'TT Travels';
-    src: url('/src/fonts/Travels/TT Travels Trial DemiBold.otf') format('opentype');
-    font-weight: 500;
-    font-style: normal;
-  }
-  
-  @font-face {
-    font-family: 'TT Travels';
-    src: url('/src/fonts/Travels/TT Travels Trial Bold.otf') format('opentype');
-    font-weight: 700;
-    font-style: normal;
-  }
-  
-  /* CSS-переменные */
-  :root {
-    /* Цвета фона */
-    --color-main-white: #FAF8F5;
-  
-    /* Цвета бренда */
-    --color-brand-green: #a0a747;
-    --color-brand-brown: #773844;
-    --color-brand-blue: #1f2057;
-    --color-brand-blue-2: #465587;
-    --color-brand-cyan: #77dfe9;
-    --color-brand-beige: #d6d1b2;
-    --color-brand-yellow: #d5b753;
-    --color-brand-orange: #be6833;
-  
-    /* Цвета текста */
-    --color-text-primary: #1a1a1a;
-    --color-text-grey: #646562;
-  
-    /* Цвета линий */
-    --color-line-primary: #eae3d9;
-    --color-line-dark: #c2bdb6;
-  }
-  
+  font-family: 'Helvetica Neue';
+  src: url('/src/fonts/Helvetica/HelveticaNeueLight.otf') format('opentype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url('/src/fonts/Helvetica/HelveticaNeue-Bold.otf') format('opentype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url('/src/fonts/Helvetica/HelveticaNeue-Medium.otf') format('opentype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+/* Подключение TT Travels */
+@font-face {
+  font-family: 'TT Travels';
+  src: url('/src/fonts/Travels/TT Travels Trial Regular.otf') format('opentype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'TT Travels';
+  src: url('/src/fonts/Travels/TT Travels Trial DemiBold.otf') format('opentype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'TT Travels';
+  src: url('/src/fonts/Travels/TT Travels Trial Bold.otf') format('opentype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+/* CSS-переменные */
+:root {
+  /* Цвета фона */
+  --color-main-white: #FAF8F5;
+
+  /* Цвета бренда */
+  --color-brand-green: #A0A747;
+  --color-brand-brown: #773844;
+  --color-brand-blue: #1F2057;
+  --color-brand-blue-2: #465587;
+  --color-brand-cyan: #77DFE9;
+  --color-brand-beige: #D6D1B2;
+  --color-brand-yellow: #D5B753;
+  --color-brand-orange: #BE6833;
+
+  /* Цвета текста */
+  --color-text-primary: #773844;
+  --color-text-grey: #646562;
+
+  /* Цвета линий */
+  --color-line-primary: #EAE3D9;
+  --color-line-dark: #C4BDB3;
+}
